ili2fme 5.11.1 (2015-07-07)
---------------------------
- ili2c-4.5.13
- clear errors flag after logging, so that new reader/writer run doesn't report already reported errors

ili2fme 5.11.0 (2015-02-04)
---------------------------
- read also modelnames from XTF header
- xtf22 writer: missing identity (TID) on ASSOCIATIONs that are not embedded
- ili2c-4.5.8

ili2fme 5.10.1 (2014-05-23)
---------------------------
- fixed read of parameter GEOM_ATTR_MAPPING:EncodeAsFmeAttribute

ili2fme 5.10.0 (2014-05-09)
---------------------------
- ili2c-4.5.3
- export elliptical arcs as linearized straights
- changed default of GEOMETRY_ENCODING from OGCHEXBIN to FMEBIN
- new reader parameter GEOM_ATTR_MAPPING/"Mapping of multiple Geometry Attributes:" to simplify viewing of INTERLIS objects with multiple geometry attributes

ili2fme 5.9.0 (2013-12-09)
---------------------------
- Reader: assume xtf format, if no extension given on inputpath
- new option to trim values when reading/writing
- bug: XtfWriter NullPointerException if FME attribute value is null (in FME2014)
- ili2c-4.5.1

ili2fme 5.8.0 (2013-04-19)
---------------------------
- writer automatically casts IFMEText to IFMEPoint (to simplify workbenches) 
- ili2c-4.4.12
- added XRF writer (BETA)

ili2fme 5.7.6 (2012-11-21)
---------------------------
- bug: ItfReader failed to read polylines
- ili2c-4.4.10

ili2fme 5.7.5 (2012-11-15)
---------------------------
- function Reader.getProperties() added to make ili2fme usable by FME2013 BETA
- improved error msg in case of trying to write non numeric values as numbers
- ili2c-4.4.9

ili2fme 5.7.4 (2012-08-31)
---------------------------
- ili2c-4.4.8
- iox-ili-1.6.8
- bug: XtfReader failed to skip element content of OIDType

ili2fme 5.7.3 (2012-08-24)
---------------------------
- bug: failed to write empty baskets

ili2fme 5.7.2 (2012-07-23)
---------------------------
- ili2c-4.4.7
- bug: XtfWriter failed to write OIDType with XML-attri

ili2fme 5.7.1 (2012-06-28)