@@ -29,7 +29,8 @@
     <javac destdir="${build}/classes" includes="**/*.java" excludes="**/test/*.java"  source="1.6" target="1.6" debug="true">
       <classpath>
         <pathelement location="lib/ili2c.jar"/>
-        <pathelement location="lib/jts-1.8.jar"/>
+        <pathelement location="lib/jts-1.13.jar"/>
+        <pathelement location="lib/jdbm-2.4.jar"/>
         <pathelement location="lib/pluginbuilder.jar"/>
       </classpath>
     	<src path="${src}" />
@@ -47,7 +48,8 @@
 	>
       <classpath>
         <pathelement location="lib/ili2c.jar"/>
-        <pathelement location="lib/jts-1.8.jar"/>
+        <pathelement location="lib/jts-1.13.jar"/>
+        <pathelement location="lib/jdbm-2.4.jar"/>
         <pathelement location="lib/pluginbuilder.jar"/>
       </classpath>
     </javadoc>
@@ -99,7 +101,8 @@
     	</zipfileset>
     	<zipfileset dir="${basedir}/lib" prefix="${ant.project.name}-${buildnr}/${fme}/plugins/">
 	    	<patternset includes="ili2c.jar"/>
-	    	<patternset includes="jts-1.8.jar"/>
+	    	<patternset includes="jts-1.13.jar"/>
+	    	<patternset includes="jdbm-2.4.jar"/>
     	</zipfileset>
     	<zipfileset dir="${basedir}/other" prefix="${ant.project.name}-${buildnr}/${fme}/metafile/">
 	    	<patternset includes="ch.ehi.fme.Main.fmf"/>
