@@ -1,7 +1,7 @@
-#Tue, 07 Jul 2015 18:05:12 +0200
+#Mon, 23 Nov 2015 17:18:43 +0100
 #Wed Feb 02 15:55:13 CET 2011
-versionMicro=1
-versionMinor=11
+versionMicro=0
+versionMinor=0
 versionBranch=
-versionDate=20150707
-versionMajor=5
+versionDate=20151123
+versionMajor=6
