@@ -1,3 +1,10 @@
+ili2fme 6.0.0 (2015-11-23) BETA
+---------------------------
+- YOU MUST manually remove the $FME/plugins/jts-1.8.jar (because it conflicts with jts-1.13.jar)
+- new built-in polygon building (FME independent)
+- iox-ili-1.11.1
+- ili2c-4.5.18
+
 ili2fme 5.11.1 (2015-07-07)
 ---------------------------
 - ili2c-4.5.13
